--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@heroicons/react": "^2.1.5",
-    "next": "14.2.5",
+    "next": "^14.2.22",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.2.5"
